--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -9,7 +9,7 @@ jobs:
   api-gateway:
     runs-on: ubuntu-latest
     container:
-      image: openjdk:24-jdk-slim:latest
+      image: openjdk:24-jdk-slim
     steps:
       - name: maven install
         run: apt-get install -y maven
