--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -1,15 +1,21 @@
-name: Api-Gateway github action
+name: CI/CD Workflow
 
 on:
   push:
     branches:
-      - main
+      - '**'
+    tags:
+      - '**'
+  pull_request:
+   branches:
+     - '**'
 
 jobs:
-  api-gateway:
+  pre-commit-scans:
     runs-on: ubuntu-latest
-    container:
-      image: maven:latest
     steps:
-       - name: Run Maven clean install
-         run: mvn clean install
+       - name: Setup Java
+         uses: action/setup-java@v4
+         with:
+           distribution: 'temurin'
+           java-version: '21'
