--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
        - name: Setup Java
-         uses: action/setup-java@v4
+         uses: actions/setup-java@v4
          with:
            distribution: 'temurin'
            java-version: '21'
