ci: Checkout the code

--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -19,3 +19,6 @@ jobs:
          with:
            distribution: 'temurin'
            java-version: '21'
+
+       - name: Checkout code
+         uses: actions/checkout@v4
