--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -22,3 +22,20 @@ jobs:
 
        - name: Checkout code
          uses: actions/checkout@v4
+
+       - name: Perform google formatter check
+         run: mvn com.spotify.fmt:fmt-maven-plugin:check
+
+       - name: GitLeaks Scan
+         uses: zricethezav/gitleaks-action@v1.3.0
+         with:
+           args: --path=.
+
+       - name: OSS Scan
+         run: mvn ossindex:audit
+         continue-on-error: true
+
+       - name: OWASP Scan
+         if: false
+         run: mvn org.owasp:dependency-check-maven:check
+         
