--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -38,4 +38,16 @@ jobs:
        - name: OWASP Scan
          if: false
          run: mvn org.owasp:dependency-check-maven:check
+
+       - name: Build Code and create docker image
+         run: mvn clean install docker:build -Dimage.registry=${{vars.CONTAINER_REGISTRY_USER}} -Dimage.tag=$GITHUB_REF_NAME
+
+       - name: Login to Docker Hub Resgistry
+         uses: docker/login-action@v3
+         with:
+           username: ${{vars.DOCKER_REGISTRY_USER}}
+           password: ${{secrets.DOCKER_REGISTRY_PAT}}
+            
+       - name: Push Docker Image
+         run: docker push ${{vars.CONTAINER_REGISTRY_USER}}/api-gateway:$GITHUB_REF_NAME
          
