--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -24,6 +24,7 @@ jobs:
          uses: actions/checkout@v4
 
        - name: Perform google formatter check
+         if: false
          run: mvn com.spotify.fmt:fmt-maven-plugin:check
 
        - name: GitLeaks Scan
