--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.dnyanyog</groupId>
 	<artifactId>api-gateway</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>latest</version>
 	<properties>
 		<maven.compiler.target>17</maven.compiler.target>
 		<maven.compiler.source>17</maven.compiler.source>
+		<image.registry>dnyanyog.org</image.registry>
+		<image.tag>latest</image.tag>
 	</properties>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -34,6 +36,25 @@
                     </execution>
                 </executions>
             </plugin>
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.44.0</version>
+				<extensions>true</extensions>
+				<configuration>
+					<images>
+						<image>
+							<name>${image.registry}/${project.artifactId}:${image.tag}</name>
+							<build>
+								<dockerFile>${project.basedir}/dockerfile</dockerFile>
+								<args>
+									<imageName>${project.artifactId}-latest</imageName>
+								</args>
+							</build>
+						</image>
+					</images>
+				</configuration>
+			</plugin>
                 
 		</plugins>
 	</build>
