--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 							<build>
 								<dockerFile>${project.basedir}/dockerfile</dockerFile>
 								<args>
-									<imageName>${project.artifactId}-latest</imageName>
+									<imageName>${project.artifactId}-${image.tag}</imageName>
 								</args>
 							</build>
 						</image>
