--- a/.github/workflows/api-gateway.yml
+++ b/.github/workflows/api-gateway.yml
@@ -3,9 +3,9 @@ name: CI/CD Workflow
 on:
   push:
     branches:
-      - '**'
+      - main
     tags:
-      - '**'
+      - main
   pull_request:
    branches:
      - '**'
@@ -41,7 +41,7 @@ jobs:
          run: mvn org.owasp:dependency-check-maven:check
 
        - name: Build Code and create docker image
-         run: mvn clean install docker:build -Dimage.registry=${{vars.DOCKER_REGISTRY_USER}} -Dimage.tag=latest
+         run: mvn clean install docker:build -Dimage.registry=${{vars.DOCKER_REGISTRY_USER}} -Dimage.tag=$GITHUB_REF_NAME
 
        - name: Login to Docker Hub Resgistry
          uses: docker/login-action@v3
